# the-sixth-summoner

./: README.md  pyproject.toml
src/: main.py
src/providers/riot/: riot_provider.py
src/repositories/riot/: riot_repository.py
src/schemas/riot/: __init__.py  base.py
src/schemas/riot/accounts/: __init__.py  account_dto.py
src/schemas/riot/champion_mastery/: __init__.py  champion_mastery_dto.py
src/schemas/riot/league/: __init__.py  league_entry_dto.py  league_parameters.py
src/schemas/riot/match/: __init__.py  match_dto.py  match_timeline_dto.py
src/schemas/riot/ml/: __init__.py  dataset_dto.py
src/schemas/riot/spectator/: __init__.py  current_game_info_dto.py
src/schemas/riot/status/: __init__.py  platform_data_dto.py
src/schemas/riot/summoner/: __init__.py  summoner_dto.py
src/services/riot/: __init__.py  riot_service.py
src/services/riot/ml/: __init__.py  riot_feature_parser.py  riot_ml_service.py
src/services/riot/ml/strategies/: __init__.py  base_strategy.py  sklearn_strategy.py  torch_strategy.py
src/utils/: logging.py
src/utils/http/: http_client.py  http_method.py
tests/: conftest.py
tests/repositories/riot/: test_riot_repository.py
tests/schemas/: test_riot_schemas.py
tests/services/riot/: test_riot_service.py
tests/services/riot/ml/: test_framework_strategies.py  test_riot_feature_parser.py  test_riot_ml_service.py
tests/utils/: test_http_client.py
