[project]
name = "the-sixth-summoner"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Perez", email = ""},
]
dependencies = ["httpx>=0.28.1", "pandas>=3.0.1", "python-dotenv>=1.2.1", "pytest>=9.0.2", "fastapi>=0.135.1", "pytest-asyncio>=1.3.0"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
