[project]
name = "the-sixth-summoner"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Perez", email = ""},
]
dependencies = ["httpx>=0.28.1", "pandas>=3.0.1", "python-dotenv>=1.2.1", "pytest>=9.0.2", "fastapi>=0.135.1", "pytest-asyncio>=1.3.0"]
requires-python = "<3.14,>=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
ml-sklearn = ["scikit-learn>=1.6.0"]
ml-torch = ["torch>=2.6.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
type = "index"
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch"
verify_ssl = true